adding a new javascript file

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <div class="center">
         <div class="dialog" id="dialog"></div>
     </div>
+    <div>
+        <img class="picSize" src="Psteve.jpeg">
+    </div>
         <script src="add-content.js"></script>
     </body>
 </html>
