--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="scoreBoard" id="human">0</div>
                 </div>
                 <div class="center">
-                    <button class="bttinside" onclick="countClicks3(); finalSay()">Siccors</button>
-                    <button class="bttinside" onclick="countClicks(); finalSay()">Rock</button>
-                    <button class="bttinside" onclick="countClicks2(); finalSay() ">Paper</button>
+                    <button class="bttinside" onclick="countClicks3(); finalSay(); ">Siccors</button>
+                    <button class="bttinside" onclick="countClicks(); finalSay(); ">Rock</button>
+                    <button class="bttinside" onclick="countClicks2(); finalSay(); ">Paper</button>
                 </div>
             </div>
         </div>
